<resources>
    <string name="app_name">KeySaver</string>
    <string name="your_password">Your password</string>
    <string name="enter_master_password">Enter master password</string>
    <string name="copy_password">Copy password</string>
    <string name="select_service">Select service</string>
    <string name="select_image">Choose image</string>
    <string name="confirm_master_password">Confirm</string>
    <string name="add_smth">Add new…</string>
    <string name="service_display_name">Service display name</string>
    <string name="configuration">Configuration</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete_service">Delete service</string>
    <string name="service_url">Service URL</string>
    <string name="configuration_name">Configuration name</string>
    <string name="password_length">Password length</string>
    <string name="character_set">Character set</string>
    <string name="use_upper_case">Use upper case</string>
    <string name="use_lower_case">Use lower case</string>
    <string name="alphabet">Alphabet</string>
    <string name="use_special_characters">Add special characters</string>
    <string name="special_characters_count">Special characters count</string>
    <string name="special_characters_set">Special characters set</string>
    <string name="default_characters_set" translatable="false"><![CDATA[!@#$%^&*()_-+=/?.,<>\'\";:[]{}]]></string>
    <string name="use_digits">Add digits</string>
    <string name="digits_count">Digits count</string>
    <string name="warning">Warning!</string>
    <string name="want_continue">Are you sure you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="short_master_password">The master password is too short</string>
    <string name="invalid_master_password">The master password does not match the one entered initially</string>
    <string name="unknown_error">Unexpected internal error</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_message">It looks like you are using Keysaver for the first time. To get started, enter a new master password. It will be used to generate all new passwords and encrypt the database. The minimum length of the master password is 8 characters. It must contain both lowercase and uppercase letters, at least one digit, and at least one special character. The master password cannot be recovered, so make sure to remember it well!</string>
    <string name="service_already_exists">A service with this name has already been saved earlier</string>
    <string name="service_url_already_exists">A service with this URL has already been saved earlier</string>
    <string name="config_already_exists">A configuration with this name already exists</string>
    <string name="wait_for_db">Decrypting the database. Please wait</string>
    <string name="service_deleted_successfull">The service has been successfully deleted</string>
    <string name="service_updated_successfull">The service has been successfully updated</string>
    <string name="required_field_empty">One of the required fields is empty</string>
    <string name="password_copied">Password copied!</string>
    <string name="file_saved">File saved successfully. Path:</string>
    <string name="db_share_warning">An encrypted copy of the current database will be saved. You assume the risks of a potential leak of this file. Do you want to continue?</string>
    <string name="db_import_warning">The current database will be erased. After the import, the application will be closed. Do you want to continue?</string>
    <string name="invalid_paasword_length">Invalid password length</string>
    <string name="invalid_special_chars_count">Incorrect number of special characters</string>
    <string name="invalid_digits_amount">Incorrect number of digits</string>
    <string name="without_any_case">Either uppercase or lowercase must be selected</string>
    <string name="internal_error">Internal error, code:</string>
    <string name="master_password_uppercase_letter">The master password must contain at least one uppercase letter</string>
    <string name="master_password_lowercase_letter">The master password must contain at least one lowercase letter</string>
    <string name="master_password_digit">The master password must contain at least one digit</string>
    <string name="master_password_special_char">The master password must contain at least one special character</string>
    <string name="master_password_help">The master password must contain both lowercase and uppercase letters, at least one digit, and one special character.</string>
    <string name="info">Information</string>
    <string name="add_service_help">To proceed, you need to save at least one service. \nEnter the service URL – it is used for password generation. \nEnter the service name – this is how it will be displayed in the service list. \nThen, choose a password generation configuration (length, character set, etc.) from the created configurations.</string>
    <string name="add_configuration_help">Creating a Configuration. \nWhen creating a new configuration, keep in mind the following restrictions:\n - Password length must be between 8 and 30 characters (Default: 16)\n - The number of special characters, as well as digits, cannot exceed a quarter of the total password length.</string>
    <string name="setup_service_help">You can change the displayed service name and the password configuration used for generating the service password.\nKeep in mind that if you modify the password configuration, the newly generated password WILL NOT match the old one.</string>
    <string name="get_password_help">Password Generation.\nSelect the service for which you need a password.\nClick on the image to generate the password.</string>
</resources>