<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddConfiguration"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="48dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_add_conf_help"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_help"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/textView9"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/configuration_name"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_name"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/add_configuration_name"
            style="@style/InputFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView10"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/password_length"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_password_length"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/add_configuration_password_length"
            style="@style/InputFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="16"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/character_set"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_upper_case"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/add_configuration_upper_case"
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:checked="true"
            android:onClick="onSelectCase"
            android:text="@string/use_upper_case"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_lower_case"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:track="@drawable/switch_track" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/add_configuration_lower_case"
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:checked="true"
            android:onClick="onSelectCase"
            android:text="@string/use_lower_case"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintBottom_toTopOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:track="@drawable/switch_track" />

        <TextView
            android:id="@+id/textView12"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/alphabet"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_alphabets"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/add_configuration_alphabets"
            style="@style/InputFieldStyle"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_add_specset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/add_configuration_add_specset"
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:checked="true"
            android:onClick="onSetSpecialUsage"
            android:text="@string/use_special_characters"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:track="@drawable/switch_track" />

        <TextView
            android:id="@+id/textView13"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/special_characters_count"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_spec_count"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/add_configuration_spec_count"
            style="@style/InputFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="2"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView14"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/special_characters_set"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_specset"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/add_configuration_specset"
            style="@style/InputFieldStyle"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/default_characters_set"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_add_digits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/add_configuration_add_digits"
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:checked="true"
            android:onClick="onSetDigitsUsage"
            android:text="@string/use_digits"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintBottom_toTopOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:track="@drawable/switch_track" />

        <TextView
            android:id="@+id/textView15"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/digits_count"
            app:layout_constraintBottom_toTopOf="@+id/add_configuration_digits_count"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/add_configuration_digits_count"
            style="@style/InputFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="2"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button7"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/color_background"
            android:onClick="onCancel"
            android:text="@string/cancel"
            android:textColor="@color/color_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button8"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="onConfirm"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>